init custom, 50% textos

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <!-- HIDDEN PREHEADER TEXT -->
     <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-        We've added a ton of features to your account. Check out the biggest changes below or log in to view them all.
+        Front-End Developer position
     </div>
 
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -147,7 +147,9 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
                         <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
-                            <h1 style="font-size: 48px; font-weight: 400; margin: 0;">Here's what's new.</h1>
+                            <span style="font-size:20px">Soy</span>
+                            <h1 style="font-size: 48px; font-weight: 400; margin: 0;"> Jordi Flores</h1>
+                            <h2 style="font-size: 20px; font-weight: 400; margin: 0; color:#ccc"> Front-End Developer</h2>
                         </td>
                     </tr>
                 </table>
@@ -170,7 +172,12 @@
                     <!-- COPY -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">The latest release of Ceej includes new features and lots of fixes to make your experience better than ever. See what's new below.</p>
+                            <p style="margin: 0;">
+                                Os escribo porque estoy interesado en presentar mi candidatura para el puesto vacante de Front-End Developer que he visto disponible en vuestra web.
+                            </p>
+                            <p style="margin: 0;">
+
+                            </p>
                         </td>
                     </tr>
                     <!-- VIDEO -->
@@ -182,54 +189,31 @@
                             </a>
                         </td>
                     </tr>
-                    <!-- COPY -->
-                    <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 40px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Everyone likes a better experience. To make using Ceej easier, more enjoyable, and safer than ever, we've rolled out some changes to your account. Here's what to expect&hellip;</p>
-                        </td>
-                    </tr>
                     <!-- COPY HEADING -->
                     <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <h2 style="font-size: 24px; font-weight: 400; margin: 0;">Brand New Dashboard</h2>
+                        <td bgcolor="#ffffff" align="left" style="padding: 40px 30px 0px 30px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <h2 style="font-size: 24px; font-weight: 400; margin: 0;">+2 años experiencia Front-End</h2>
                         </td>
                     </tr>
                     <!-- COPY -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">We've completely overhauled the dashboard to make vital stats more readable, users easier to manage, and have given you more control over choosing which data should be shown where.</p>
+                            <p style="margin: 0;">En este último período, he centrado mi carrera profesional hacía esta capa del desarrollo, que en estos momentos esta viviendo un momento excepcional.</p>
                         </td>
                     </tr>
                     <!-- COPY -->
                     <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;"><a href="http://litmus.com" target="_blank" style="color: #539be2;">Experience the new dashboard</a></p>
+                        <td bgcolor="#ffffff" align="left" style="padding: 40px 30px 0px 30px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <h2 style="font-size: 24px; font-weight: 400; margin: 0;">+10 años como Full-Stack Developer</h2>
                         </td>
                     </tr>
                     <!-- COPY HEADING -->
                     <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <h2 style="font-size: 24px; font-weight: 400; margin: 0;">White Label Experience</h2>
+                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <p style="margin: 0;">Desarrollando soluciones multimedia integrales en un Agencia, gracias a ello pude trabajar en multitud de proyectos, para varios clientes de renombre.</p>
                         </td>
                     </tr>
-                    <!-- COPY -->
-                    <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Using Ceej with clients? Now you can completely customize their dashboard and experience with our white label service. Take our product and make it their own.</p>
-                        </td>
-                    </tr>
-                    <!-- COPY HEADING -->
-                    <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <h2 style="font-size: 24px; font-weight: 400; margin: 0;">Improved Security</h2>
-                        </td>
-                    </tr>
-                    <!-- COPY -->
-                    <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; border-radius: 0px 0px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">With two-factor authentication, Ceej is now safer than ever to use. We've also been fine-tuning our servers to keep your data more secure. Never worry about hacks again.</p>
-                        </td>
-                    </tr>
+
                 </table>
                 <!--[if (gte mso 9)|(IE)]>
             </td>
