--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <p style="margin: 0;">
-                                Os escribo porque estoy interesado en presentar mi candidatura para el puesto vacante de Front-End Developer que he visto disponible en vuestra web.
+                                Hola, contacto con vosotros porque estoy interesado en presentar mi candidatura para el puesto vacante de <strong>Front-End Developer</strong> que teneis vacante.
                             </p>
-                            <p style="margin: 0;">
-
+                            <p style="padding:20px 0px 0px 0px; margin:0">
+                                Os cuento un poco más sobre mi:
                             </p>
                         </td>
                     </tr>
@@ -209,11 +209,10 @@
                     </tr>
                     <!-- COPY HEADING -->
                     <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <p style="margin: 0;">Desarrollando soluciones multimedia integrales en un Agencia, gracias a ello pude trabajar en multitud de proyectos, para varios clientes de renombre.</p>
                         </td>
                     </tr>
-
                 </table>
                 <!--[if (gte mso 9)|(IE)]>
             </td>
@@ -265,18 +264,6 @@
                             </p>
                         </td>
                     </tr>
-                    <!-- PERMISSION REMINDER -->
-                    <tr>
-                        <td bgcolor="#f4f4f4" align="left" style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
-                            <p style="margin: 0;">You received this email because we thought you'd like some updates on Ceej. If it looks weird, <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">view it in your browser</a>.</p>
-                        </td>
-                    </tr>
-                    <!-- UNSUBSCRIBE -->
-                    <tr>
-                        <td bgcolor="#f4f4f4" align="left" style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
-                            <p style="margin: 0;">If these emails get annoying, please feel free to <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">unsubscribe</a>.</p>
-                        </td>
-                    </tr>
                     <!-- ADDRESS -->
                     <tr>
                         <td bgcolor="#f4f4f4" align="left" style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
@@ -292,33 +279,6 @@
             </td>
         </tr>
     </table>
-
-    <!-- LITMUS ATTRIBUTION -->
-    <table border="0" cellpadding="0" cellspacing="0" width="100%">
-        <tr>
-            <td bgcolor="#ffffff" align="center">
-                <!--[if (gte mso 9)|(IE)]>
-            <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
-            <tr>
-            <td align="center" valign="top" width="600">
-            <![endif]-->
-                <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-                    <tr>
-                        <td bgcolor="#ffffff" align="center" style="padding: 30px 30px 30px 30px; color: #666666; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
-                            <p style="margin: 0;">This email was built and tested with Litmus. <a href="https://litmus.com?utm_campaign=litmus_templates&utm_source=litmus_community&utm_medium=templates" style="color: #5db3ec;">What's Litmus?</a></p>
-                        </td>
-                    </tr>
-                </table>
-                <!--[if (gte mso 9)|(IE)]>
-            </td>
-            </tr>
-            </table>
-            <![endif]-->
-            </td>
-        </tr>
-    </table>
-    <!-- END LITMUS ATTRIBUTION -->
-
 </body>
 
 </html>
