--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <p style="margin: 0;">
-                                Hola, contacto con vosotros porque estoy interesado en presentar mi candidatura para el puesto vacante de <strong>Front-End Developer</strong> que teneis vacante.
+                                Hola, contacto con vosotros porque estoy interesado en presentar mi candidatura para el puesto de <strong>Front-End Developer</strong> que teneis vacante.
                             </p>
                             <p style="padding:20px 0px 0px 0px; margin:0">
                                 Os cuento un poco más sobre mi:
