--- a/index.html
+++ b/index.html
@@ -136,30 +136,6 @@
             <![endif]-->
             </td>
         </tr>
-        <!-- HERO -->
-        <tr>
-            <td bgcolor="#539be2" align="center" style="padding: 0px 10px 0px 10px;">
-                <!--[if (gte mso 9)|(IE)]>
-            <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
-            <tr>
-            <td align="center" valign="top" width="600">
-            <![endif]-->
-                <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-                    <tr>
-                        <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
-                            <span style="font-size:20px">Soy</span>
-                            <h1 style="font-size: 48px; font-weight: 400; margin: 0;"> Jordi Flores</h1>
-                            <h2 style="font-size: 20px; font-weight: 400; margin: 0; color:#ccc"> Front-End Developer</h2>
-                        </td>
-                    </tr>
-                </table>
-                <!--[if (gte mso 9)|(IE)]>
-            </td>
-            </tr>
-            </table>
-            <![endif]-->
-            </td>
-        </tr>
         <!-- COPY BLOCK -->
         <tr>
             <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px;">
@@ -173,11 +149,35 @@
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <p style="margin: 0;">
-                                Hola, contacto con vosotros porque estoy interesado en presentar mi candidatura para el puesto de <strong>Front-End Developer</strong> que teneis vacante.
+                                Hola, me pongo en contacto con vosotros porque estoy interesado en presentar mi candidatura para el puesto de <strong>Front-End Developer</strong> que he visto vacante en vuestra web.
                             </p>
                             <p style="padding:20px 0px 0px 0px; margin:0">
                                 Os cuento un poco más sobre mi:
                             </p>
+                        </td>
+                    </tr>
+                    <!-- HERO -->
+                    <tr>
+                        <td bgcolor="#ffffff" align="center" style="padding: 0px 10px 0px 10px;">
+                            <!--[if (gte mso 9)|(IE)]>
+                        <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
+                        <tr>
+                        <td align="center" valign="top" width="600">
+                        <![endif]-->
+                            <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
+                                <tr>
+                                    <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
+                                        <span style="font-size:20px">Soy</span>
+                                        <h1 style="font-size: 48px; font-weight: 400; margin: 0;"> Jordi Flores</h1>
+                                        <h2 style="font-size: 20px; font-weight: 400; margin: 0; color:#ccc"> Front-End Developer</h2>
+                                    </td>
+                                </tr>
+                            </table>
+                            <!--[if (gte mso 9)|(IE)]>
+                        </td>
+                        </tr>
+                        </table>
+                        <![endif]-->
                         </td>
                     </tr>
                     <!-- VIDEO -->
