rediseño, quitamos video, añadimos textos

--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@
             <![endif]-->
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
-                        <td align="center" valign="top" style="padding: 40px 10px 40px 10px;">
+                        <td align="center" valign="top" style="padding: 20px 10px 20px 10px;">
                             <a href="http://litmus.com" target="_blank">
-                                <img alt="Logo" src="http://litmuswww.s3.amazonaws.com/community/template-gallery/ceej/logo.png" width="40" height="40" style="display: block; width: 40px; max-width: 40px; min-width: 40px; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;"
-                                    border="0">
+                                <img alt="Logo" src="http://jordi-flores.es/img/jordi-flores.png" width="80" height="80" style="display: block; width: 80px; max-width: 80px; min-width: 80px; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;" border="0">
                             </a>
                         </td>
                     </tr>
@@ -136,6 +135,7 @@
             <![endif]-->
             </td>
         </tr>
+
         <!-- COPY BLOCK -->
         <tr>
             <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px;">
@@ -147,18 +147,18 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <!-- COPY -->
                     <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <p style="margin: 0;">
-                                Hola, me pongo en contacto con vosotros porque estoy interesado en presentar mi candidatura para el puesto de <strong>Front-End Developer</strong> que he visto vacante en vuestra web.
+                                Hola, contacto con vosotros porque estoy interesado en presentar mi candidatura para el puesto de <strong>Front-End Developer</strong> que he visto vacante en vuestra web.
                             </p>
                             <p style="padding:20px 0px 0px 0px; margin:0">
-                                Os cuento un poco más sobre mi:
+                                Os cuento un poco más sobre mi, me llamo:
                             </p>
                         </td>
                     </tr>
                     <!-- HERO -->
                     <tr>
-                        <td bgcolor="#ffffff" align="center" style="padding: 0px 10px 0px 10px;">
+                        <td bgcolor="#ffffff" align="center" style="padding: 0px 0px 0px 0px;">
                             <!--[if (gte mso 9)|(IE)]>
                         <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
                         <tr>
@@ -167,9 +167,8 @@
                             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                                 <tr>
                                     <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
-                                        <span style="font-size:20px">Soy</span>
                                         <h1 style="font-size: 48px; font-weight: 400; margin: 0;"> Jordi Flores</h1>
-                                        <h2 style="font-size: 20px; font-weight: 400; margin: 0; color:#ccc"> Front-End Developer</h2>
+                                        <h2 style="font-size: 20px; font-weight: 400; margin: 0; color:#ccc">Front-End Developer</h2>
                                     </td>
                                 </tr>
                             </table>
@@ -181,15 +180,25 @@
                         </td>
                     </tr>
                     <!-- VIDEO -->
-                    <tr>
+                    <!--tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 0px 0px 0px 0px;">
                             <a href="http://litmus.com" target="_blank">
                                 <img alt="Product update video" src="http://litmuswww.s3.amazonaws.com/community/template-gallery/ceej/video.jpg" width="600" style="display: block; width: 100%; max-width: 100%; min-width: 100px; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;"
                                     border="0">
                             </a>
                         </td>
-                    </tr>
+                    </tr-->
                     <!-- COPY HEADING -->
+                    <tr>
+                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <p style="margin: 0;">Tengo 39 años y vivo en Sant Joan Despí, una población pegada a Barcelona.</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <p style="margin: 0;">Os resumo muy brevemente mi experiencia:</p>
+                        </td>
+                    </tr>
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 40px 30px 0px 30px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <h2 style="font-size: 24px; font-weight: 400; margin: 0;">+2 años experiencia Front-End</h2>
@@ -198,7 +207,8 @@
                     <!-- COPY -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">En este último período, he centrado mi carrera profesional hacía esta capa del desarrollo, que en estos momentos esta viviendo un momento excepcional.</p>
+                            <p style="margin: 0;">En este último período, he centrado mi carrera profesional hacía esta capa del desarrollo, que en estos momentos esta viviendo un momento excepcional. </p>
+                            <p>Mis herramientas de trabajo habituales son Javascript, Ionic 2, Gulp, Sass, Reveal.js, Node.js, Electron.io entre otras.</p>
                         </td>
                     </tr>
                     <!-- COPY -->
@@ -211,6 +221,33 @@
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <p style="margin: 0;">Desarrollando soluciones multimedia integrales en un Agencia, gracias a ello pude trabajar en multitud de proyectos, para varios clientes de renombre.</p>
+                            <p>Durante este período laboral, mis desarrollos normalmente se basaban en C#, Asp, Less, Javascript, ActionScript 2 y 3(Flash), Sql Server, Html5, PhoneGap...</p>
+                        </td>
+                    </tr>
+
+                </table>
+                <!--[if (gte mso 9)|(IE)]>
+            </td>
+            </tr>
+            </table>
+            <![endif]-->
+            </td>
+        </tr>
+
+        <!-- SUPPORT CALLOUT -->
+        <tr>
+            <td bgcolor="#f4f4f4" align="center" style="padding: 30px 10px 0px 10px;">
+                <!--[if (gte mso 9)|(IE)]>
+            <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
+            <tr>
+            <td align="center" valign="top" width="600">
+            <![endif]-->
+                <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
+                    <!-- HEADLINE -->
+                    <tr>
+                        <td bgcolor="#B3E5FC" align="center" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <h2 style="font-size: 20px; font-weight: 400; color: #111111; margin: 0;">¿Háblamos y nos conocemos?</h2>
+                            <p style="margin: 0; "><a href="tel:637537351" target="_blank" style="color: #539be2;">+34 637537351</a></p>
                         </td>
                     </tr>
                 </table>
@@ -232,9 +269,13 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <!-- HEADLINE -->
                     <tr>
-                        <td bgcolor="#B3E5FC" align="center" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <h2 style="font-size: 20px; font-weight: 400; color: #111111; margin: 0;">Need more help?</h2>
-                            <p style="margin: 0;"><a href="http://litmus.com" target="_blank" style="color: #539be2;">We&rsquo;re here, ready to talk</a></p>
+                        <td bgcolor="#ffffff" align="left" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <h2 style="font-size: 24px; font-weight: 400; margin: 0;">Social Media</h2>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td bgcolor="#ffffff" align="left" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">Linkedin </a> -
                         </td>
                     </tr>
                 </table>
@@ -266,8 +307,8 @@
                     </tr>
                     <!-- ADDRESS -->
                     <tr>
-                        <td bgcolor="#f4f4f4" align="left" style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
-                            <p style="margin: 0;">Ceej - 1234 Main Street - Anywhere, MA - 56789</p>
+                        <td bgcolor="#f4f4f4" align="center" style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
+                            <p style="margin: 0;">Sant Joan Despi (Barcelona) - Spain</p>
                         </td>
                     </tr>
                 </table>
