logos, faltan enlaces

--- a/index.html
+++ b/index.html
@@ -246,8 +246,10 @@
                     <!-- HEADLINE -->
                     <tr>
                         <td bgcolor="#B3E5FC" align="center" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <h2 style="font-size: 20px; font-weight: 400; color: #111111; margin: 0;">¿Háblamos y nos conocemos?</h2>
-                            <p style="margin: 0; "><a href="tel:637537351" target="_blank" style="color: #539be2;">+34 637537351</a></p>
+                            <h2 style="font-size: 20px; font-weight: 400; color: #111111; margin: 0;"></h2>
+                            <p style="margin: 0; ">
+                                <a href="tel:637537351" target="_blank" style="color: #539be2; text-decoration:none"><img src="https://xanisu.github.io/responsive-email-template/images/phone-logo-md.png"> +34 637537351</a>
+                            </p>
                         </td>
                     </tr>
                 </table>
@@ -270,14 +272,46 @@
                     <!-- HEADLINE -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <h2 style="font-size: 24px; font-weight: 400; margin: 0;">Social Media</h2>
+
+                        </td>
+                        <td bgcolor="#ffffff" align="left" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                         </td>
                     </tr>
                     <tr>
-                        <td bgcolor="#ffffff" align="left" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">Linkedin </a> -
+                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/linkeding.png" width="20" height="20" />&nbsp;Linkedin </a>
+                        </td>
+
+
+                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <a href="http://jordi-flores.es" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/world-wide-web-icon_66077-3.png" width="20" height="20" />&nbsp;jordi-flores.es </a>
                         </td>
                     </tr>
+                    <tr>
+                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/github-512.png" width="20" height="20" />&nbsp;Github </a>
+                        </td>
+                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/stackoverflow-3-xxl-3.png" width="20" height="20" />&nbsp;Stackoverflow </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/Button-Fill-Black-Large.png" width="20" height="20" />&nbsp; Codepen</a>
+                        </td>
+                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/facebook-black-radius-transparent-26.png" width="20" height="20" />&nbsp; Facebook</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <a href="http://litmus.com" target="_blank" style="color: #111111; text-decoration:none; font-weight: 700;"><img src="https://xanisu.github.io/responsive-email-template/images/twitter-square-logo-3.png" width="20" height="20" />&nbsp; Twitter</a>
+                        </td>
+                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                        </td>
+                    </tr>
+
+
                 </table>
                 <!--[if (gte mso 9)|(IE)]>
             </td>
